# physionet2025-locked-in

./: .gitignore  Dockerfile  diagnostic_script.py  helper_code.py  normalization_comparison.py  prepare_ptbxl_data_labels.py  pyproject.toml  requirements.txt  team_code.py  train_model.py
extraction_scripts/: extract_code15_data.sh
helpers/: get_data_stats.py  get_holdout_data.py
holdout_data/: 100003.hea  1000072.hea  1000087.hea  1000108.hea  1000151.hea  1000190.hea  1000201.hea  1000217.hea  1000229.hea  1000239.hea  1000256.hea  1000262.hea  1000264.hea  1000271.hea  1000306.hea  1000318.hea  1000334.hea  100035.hea  1000353.hea  1000354.hea  1000379.hea  1000385.hea  1000416.hea  1000428.hea  1000454.hea  10005.hea  100050.hea  1000574.hea  1000618.hea  1000643.hea  1000649.hea  1000730.hea  1000815.hea  1000880.hea  1000939.hea  1000954.hea  1000955.hea  1000994.hea  1000999.hea  1001005.hea  (+43 more)
holdout_outputs/: 1000001.txt  1000010.txt  1000049.txt  1000078.txt  1000086.txt  1000104.txt  1000132.txt  1000175.txt  1000181.txt  1000182.txt  1000206.txt  1000250.txt  1000253.txt  1000263.txt  1000285.txt  1000317.txt  1000331.txt  1000366.txt  1000423.txt  1000465.txt  1000471.txt  1000499.txt  1000512.txt  1000539.txt  1000549.txt  1000573.txt  1000642.txt  1000648.txt  1000657.txt  1000672.txt  1000694.txt  1000713.txt  1000724.txt  1000739.txt  1000748.txt  1000807.txt  1000816.txt  1000841.txt  1000884.txt  100093.txt  (+61 more)
implementations/: README.md  cnn.py  gnn.py  moe.py  moe_lstm.py  resnet.py  resnet_trans.py
modules/: README.md  data_pipeline.py  (+6 more)
(+1 files in other folders)
