[project]
name = "physionet2025-locked-in"
version = "0.1.0"
description = ""
authors = [
{name = "AntoDono",email = "anthony20151128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib (==1.4.2)",
    "numpy (==2.0.2)",
    "pandas (==2.2.2)",
    "scikit-learn (==1.6.0)",
    "wfdb (==4.1.2)",
    "h5py (==3.12.1)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch",
    "torchvision",
    "torchaudio",
    "torch-geometric (>=2.6.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

